# Prattle

./: .gitignore_BACKUP_3979  .gitignore_BASE_3871  .gitignore_LOCAL_3871  .gitignore_REMOTE_3871  AUTHORS  Documentation.md  LICENSE.txt  README.md  client2  foo.patch
Client/: CMakeLists.txt  Client  Client.cbp  Client.cpp  Client.depend  Client.hpp  Client.layout  Config.hpp  NetworkManager.cpp  NetworkManager.hpp  System.cpp  System.hpp  Sytem.cpp  UI.cpp  UI.hpp  main.cpp
Client/Design/: chat screen mockup with contacts open.xcf  chat screen mockup.xcf  login mockup.xcf  menu_items.xcf  prattle_wave.txt
Client/include/: Client.hpp  ClientConsole.hpp  ClientGUI.hpp  Config.hpp  ErrorLog.hpp  GraphicList.hpp  GraphicListItem.hpp  GraphicTab.hpp  GraphicalUI.hpp  Logger.hpp  Menu.hpp  Network.h  Network.hpp  NetworkManager.hpp  SearchPanel.hpp  System.hpp  TeeStream.hpp  UI.hpp  UserInterface.hpp
Client/resources/config/: client.conf  login.conf
Client/resources/local/: client.conf
Client/resources/widgets/: Black.conf  Black.txt
Client/resources/widgets-old1/: Black.txt  Black.xcf
Client/resources/widgets-stable/: Black-copy.conf  Black.conf
Client/src/: Client (copy).cpp  Client.cpp  ClientConsole.cpp  ClientGUI.cpp  ErrorLog.cpp  GraphicList.cpp  GraphicListItem.cpp  GraphicTab.cpp  GraphicalUI.cpp  Logger.cpp  Menu.cpp  Network.cpp  NetworkManager.cpp  SearchPanel.cpp  System.cpp  TeeStream.cpp  UI.cpp
Client_pre_redesign/: main.cpp
Client_pre_redesign/include/: Client.hpp  ClientGUI.hpp
Client_pre_redesign/src/: System.cpp
Server/: CMakeLists.txt  ErrorLog.hpp  Server  Server.cbp  Server.cpp  Server.depend  Server.hpp  Server.layout  Server.md  System.cpp  System.hpp  Sytem.cpp  UserDatabase.cpp  UserDatabase.hpp  connections.db  main.cpp
Server-Controller/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  prattle-server-controller
Server/SHA256/: SHA256.cpp
Server/include/: ErrorLog.hpp  Log.hpp  Logger.hpp  Logger.hpp.orig  Server.hpp  System.hpp  UserDatabase.hpp
Server/resources/: members.db  server.conf
Server/src/: ErrorLog.cpp  Log.cpp  Logger.cpp  Logger.cpp.orig  Server.cpp  Server.cpp.orig  Server_LOCAL_18841.cpp  Server_REMOTE_18841.cpp  System.cpp  TeeStream.cpp  UserDatabase.cpp
Server/src/SHA256/: SHA256.cpp  SHA256.h
